# Shroud-of-Kings

./: .gitignore  CMakeLists.txt  ideas.txt  main.cpp
frontend/: index.html  menu.js
frontend/models/: labirint.glb
include/: ApiManager.hpp  Player.hpp
src/: Player.cpp
